# data-iceberg-sandbox

./: .gitignore  README.md
etl/: .dockerignore  .pyiceberg.yaml  Dockerfile  README.md  pyproject.toml
etl/dbtrisingwave/: README.md  dbt_project.yml
etl/dbtrisingwave/models/customer/: src_iceberg_raw_clients.sql
etl/dbtrisingwave/models/finance/: mv_fraud_alerts.sql  mv_fraud_alerts_client.sql  sink_iceberg_fraud_alerts_client.sql  sink_kafka_fraud_alerts_client.sql  src_kafka_credit_card_transactions.sql
etl/dbtrisingwave/seeds/: credit_card_ownership.csv  seeds.yml
etl/src/apps/analytics/: count_clients.py
etl/src/apps/load_people/: create_table.py
etl/src/apps/stream_transaction/: create_topic.py  produce_transactions.py  transaction.avsc  utils.py
etl/src/apps/utils/: constants.py  spark_utils.py
infra/: README.md  create-postgres-databases.sh  docker-compose.yml  init-catalog-trino.sql  init-warehouse.json  jupyter-docker-compose.yml  kafka-bootstrap.yaml  kafka-docker-compose.yml  keycloak-realm.json  nimtable-config.yaml  nimtable-docker-compose.yml  observability-docker-compose.yml  prometheus.yaml  pyiceberg-docker-compose.yml  pykafka-docker-compose.yml  pyspark-docker-compose.yml  risingwave-console.ini  risingwave-docker-compose.yml  risingwave-usecase.sql  risingwave.toml  streaming-usecase.md  trino-docker-compose.yml
infra/grafana/: grafana-dashboard.yml  grafana-datasource.yml  grafana.ini
infra/notebooks/: 01-Management.ipynb  02-Trino-init.ipynb  03-Trino-query.ipynb  04-PyIceberg.ipynb  redirect_handler.py
(+10 files in other folders)
