[project]
name = "apps"
version = "0.1.0"
description = "First test of iceberg"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
]

[dependency-groups]
spark-apps = [
    "pyspark>=4.0.0"
]
python-apps = [
    "polars>=1.34.0",
    "pyiceberg>=0.10.0",
    "pyarrow>=22.0.0",
]
streaming-app = [
    "confluent-kafka[avro,schemaregistry]>=2.12.1",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
indent-width = 4
